--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
         
         <!-- Styles -->
-        <link href="css/style.css" rel="stylesheet"/>
+        <link href="https://crackstreams.onl/css/style.css" rel="stylesheet"/>
         <link rel="shortcut icon" type="image/x-icon" href="https://crackstreams.onl/images/watch-live-nfl-streams.png"/>
         
         <script>
